# calf

./: .gitignore  README.md  pyproject.toml  requirements-dev.in  setup.py
calf/: __init__.py  __main__.py
docs/: design.md
docs/examples/: composite.py  nextday.py  simple.py
tests/: test_calf.py
