[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "calf"
readme = "README.md"
requires-python = ">= 3.9"
authors = [
    { name="Isaac To", email="isaac.to@gmail.com" },
]
description = "Command Argument Loading Functions"
license = "MIT"
license-files = ["LICENSE"]
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]

[project.scripts]
calf = "calf:__main__.main"

[project.urls]
Homepage = "https://github.com/isaacto/calf"
Repository = "https://github.com/isaacto/calf.git"
Issues = "https://github.com/isaacto/calf/issues"

[tool.hatch.version]
source = "regex"
path = "calf/__init__.py"
